FIX: innerHTML -> innerText

--- a/JqueryLibrary/src/template.html
+++ b/JqueryLibrary/src/template.html
@@ -7,9 +7,11 @@
   <body>
     <div id="container">
       <div class="container-inner">
-        <div class="test">some text</div>
-        <div class="test">some text</div>
-        <div class="test">some text</div>
+        <div class="test" title="hello">
+          <div class="example">example</div>  
+        </div>
+        <div class="test" title="hello">some text</div>
+        <div class="test" title="hello">some text</div>
       </div>
     </div>
   </body>
