FIX: fixed bag with react in config and changed optimization

--- a/Webpack/src/index.html
+++ b/Webpack/src/index.html
@@ -7,6 +7,7 @@
     <title>Webpack</title>
 </head>
 <body>
+    <div id="root"></div>
     <h1>Webpack</h1>
     <button id="btn">Load!</button>
 </body>
